--- a/app/design/frontend/base/default/template/catalog/product/price.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/price.phtml
@@ -203,11 +203,15 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
         <?php $_originalWeeeTaxAmount = $_store->roundPrice($_store->convertPrice($_originalWeeeTaxAmount)) ?>
 
         <?php if ($_weeeTaxAmount && $_weeeHelper->typeOfDisplay($_product, 0)): // including ?>
+            <?php $_oldPriceDisplay = $_regularPrice + $_originalWeeeTaxAmount; ?>
+            <?php $_newPriceDisplay = $_finalPrice + $_weeeTaxAmount; ?>
+            <?php $_discountPercent = round((($_oldPriceDisplay - $_newPriceDisplay) / $_oldPriceDisplay) * 100); ?>
             <p class="old-price">
                 <span class="price-label"><?= $this->__('Regular Price:') ?></span>
                 <span class="price" id="old-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
-                    <?= $_coreHelper->formatPrice($_regularPrice + $_originalWeeeTaxAmount, false) ?>
+                    <?= $_coreHelper->formatPrice($_oldPriceDisplay, false) ?>
                 </span>
+                <span class="discount-percent">-<?= $_discountPercent ?>%</span>
             </p>
 
             <?php if ($_taxHelper->displayBothPrices()): ?>
@@ -236,11 +240,15 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
             <?php endif ?>
 
         <?php elseif ($_weeeTaxAmount && $_weeeHelper->typeOfDisplay($_product, 1)): // incl. + weee ?>
+            <?php $_oldPriceDisplay = $_regularPrice + $_originalWeeeTaxAmount; ?>
+            <?php $_newPriceDisplay = $_finalPrice + $_weeeTaxAmount; ?>
+            <?php $_discountPercent = round((($_oldPriceDisplay - $_newPriceDisplay) / $_oldPriceDisplay) * 100); ?>
             <p class="old-price">
                 <span class="price-label"><?= $this->__('Regular Price:') ?></span>
                 <span class="price" id="old-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
-                    <?= $_coreHelper->formatPrice($_regularPrice + $_originalWeeeTaxAmount, false) ?>
+                    <?= $_coreHelper->formatPrice($_oldPriceDisplay, false) ?>
                 </span>
+                <span class="discount-percent">-<?= $_discountPercent ?>%</span>
             </p>
 
             <p class="special-price">
@@ -282,11 +290,15 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
             <?php endif ?>
             </p>
         <?php elseif ($_weeeTaxAmount && $_weeeHelper->typeOfDisplay($_product, 4)): // incl. + weee ?>
+            <?php $_oldPriceDisplay = $_regularPrice + $_originalWeeeTaxAmount; ?>
+            <?php $_newPriceDisplay = $_finalPrice + $_weeeTaxAmount; ?>
+            <?php $_discountPercent = round((($_oldPriceDisplay - $_newPriceDisplay) / $_oldPriceDisplay) * 100); ?>
             <p class="old-price">
                 <span class="price-label"><?= $this->__('Regular Price:') ?></span>
                 <span class="price" id="old-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
-                    <?= $_coreHelper->formatPrice($_regularPrice + $_originalWeeeTaxAmount, false) ?>
+                    <?= $_coreHelper->formatPrice($_oldPriceDisplay, false) ?>
                 </span>
+                <span class="discount-percent">-<?= $_discountPercent ?>%</span>
             </p>
 
             <p class="special-price">
@@ -294,7 +306,7 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
                 <span class="price-excluding-tax">
                     <span class="label"><?= $this->helper('tax')->__('Excl. Tax:') ?></span>
                     <span class="price" id="price-excluding-tax-<?= $_id ?><?= $this->getIdSuffix() ?>">
-                        <?= $_coreHelper->formatPrice($_finalPrice + $_weeeTaxAmount, false) ?>
+                        <?= $_coreHelper->formatPrice($_newPriceDisplay, false) ?>
                     </span>
                 </span>
             <span class="weee">(
@@ -312,11 +324,13 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
             </span>
             </p>
         <?php elseif ($_weeeTaxAmount && $_weeeHelper->typeOfDisplay($_product, 2)): // excl. + weee + final ?>
+            <?php $_discountPercent = round((($_regularPrice - $_finalPrice) / $_regularPrice) * 100); ?>
             <p class="old-price">
                 <span class="price-label"><?= $this->__('Regular Price:') ?></span>
                 <span class="price" id="old-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
                     <?= $_coreHelper->formatPrice($_regularPrice, false) ?>
                 </span>
+                <span class="discount-percent">-<?= $_discountPercent ?>%</span>
             </p>
 
             <p class="special-price">
@@ -341,11 +355,13 @@ $_specialPriceStoreLabel = $this->getProductAttribute('special_price')->getStore
                 </span>
             </p>
         <?php else: // excl. ?>
+            <?php $_discountPercent = round((($_regularPrice - $_finalPrice) / $_regularPrice) * 100); ?>
             <p class="old-price">
                 <span class="price-label"><?= $this->__('Regular Price:') ?></span>
                 <span class="price" id="old-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
                     <?= $_coreHelper->formatPrice($_regularPrice, false) ?>
                 </span>
+                <span class="discount-percent">-<?= $_discountPercent ?>%</span>
             </p>
 
             <?php if ($_taxHelper->displayBothPrices()): ?>
