--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -76,8 +76,7 @@ Default layout, loads most of the pages
             <!--<update handle="formkey"/> this won't work, see the try/catch and a jammed exception in Mage_Core_Model_Layout::createBlock() -->
             <block type="core/template" name="formkey" as="formkey" template="formkey.phtml"/>
 
-            <!-- deprecated since 1.7.0.0 see Mage_Page_Block_Js_Translate -->
-            <block type="page/js_translate" name="js_translate" as="js_translate" template="page/js/translate.phtml"/>
+            <block type="core/template" name="js_translate" as="js_translate" template="page/js/translate.phtml"/>
             <block type="core/text_list" name="left" as="left"/>
             <block type="core/text_list" name="content" as="content"/>
             <block type="core/messages" name="messages" as="messages"/>
