Fixed reviews link clicking on product page
  The onclick handler was looking for #product-tab-reviews but the actual
  tab element ID is #tab-reviews based on the tab-{alias} pattern.

--- a/app/design/frontend/base/default/template/review/helper/summary.phtml
+++ b/app/design/frontend/base/default/template/review/helper/summary.phtml
@@ -19,7 +19,7 @@
             </div>
         <?php endif ?>
         <p class="rating-links">
-            <a href="#product-tab-reviews" onclick="document.querySelector(this.getAttribute('href')).click()"><?= $this->__('%d Review(s)', $this->getReviewsCount()) ?></a>
+            <a href="#tab-reviews" onclick="document.querySelector(this.getAttribute('href')).click()"><?= $this->__('%d Review(s)', $this->getReviewsCount()) ?></a>
         </p>
     </div>
 <?php elseif ($this->getDisplayIfEmpty()): ?>
