--- a/app/design/adminhtml/default/default/template/oauth/authorize/reject.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/reject.phtml
@@ -8,16 +8,9 @@
  * @copyright   Copyright (c) 2024-2026 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Core_Block_Template $this */
 ?>
-<?php
-/**
- * "Grant Access" button
- *
- * @see Mage_Oauth_Block_Authorize
- * @var Mage_Oauth_Block_Authorize $this
- */
-?>
-<?php /** @var Mage_Core_Block_Template $this */ ?>
 <div class="login-container">
     <div class="login-box">
         <div class="login-form">
