--- a/app/design/frontend/base/default/template/customer/account/dashboard/newsletter.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/newsletter.phtml
@@ -12,7 +12,7 @@
 /** @var Mage_Customer_Block_Account_Dashboard_Newsletter $this */
 ?>
 <div class="col-2">
-    <h4><?= $this->__('Newsletters') ?></h4>
-    <a href="<?= $this->getUrl('newsletter/manage') ?>"><?= $this->__('Edit Newsletters') ?></a>
+    <h4><?= $this->__('Newsletter') ?></h4>
+    <a href="<?= $this->getUrl('newsletter/manage') ?>"><?= $this->__('Edit') ?></a>
     <p><?= $this->__('You are currently subscribed to our newsletter.') ?></p>
 </div>
