--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -31,15 +31,15 @@
     <div class="col-2">
         <div class="box">
             <div class="box-title">
-                <h3><?= $this->__('Newsletters') ?></h3>
+                <h3><?= $this->__('Newsletter') ?></h3>
                 <a href="<?= $this->getUrl('newsletter/manage') ?>"><?= $this->__('Edit') ?></a>
             </div>
             <div class="box-content">
                 <p>
-                    <?php if( $this->getIsSubscribed() ): ?>
-                        <?= $this->__("You are currently subscribed to 'General Subscription'.") ?>
+                    <?php if ($this->getIsSubscribed()): ?>
+                        <?= $this->__('You are currently subscribed to our newsletter.') ?>
                     <?php else: ?>
-                        <?= $this->__('You are currently not subscribed to any newsletter.') ?>
+                        <?= $this->__('You are not subscribed to our newsletter.') ?>
                     <?php endif ?>
                 </p>
             </div>
