--- a/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/address.phtml
@@ -13,15 +13,13 @@
 ?>
 <div class="box-account box-info">
     <div class="box-head">
-        <h2><?= $this->__('Address Book') ?></h2>
-        <a href="<?= $this->getAddressBookUrl() ?>"><?= $this->__('Manage Addresses') ?></a>
+        <h2><?= $this->__('Address Book') ?> <a href="<?= $this->getAddressBookUrl() ?>" title="<?= $this->quoteEscape($this->__('Manage Addresses')) ?>"><?= $this->getIconSvg('edit') ?></a></h2>
     </div>
     <div class="col2-set">
         <div class="col-1">
             <div class="box">
                 <div class="box-title">
-                    <h3><?= $this->__('Default Billing Address') ?></h3>
-                    <a href="<?= $this->getPrimaryBillingAddressEditUrl() ?>"><?= $this->__('Edit Address') ?></a>
+                    <h3><?= $this->__('Default Billing Address') ?> <a href="<?= $this->getPrimaryBillingAddressEditUrl() ?>" title="<?= $this->quoteEscape($this->__('Edit Address')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
                 </div>
                 <div class="box-content">
                     <address><?= $this->getPrimaryBillingAddressHtml() ?></address>
@@ -31,8 +29,7 @@
         <div class="col-2">
             <div class="box">
                 <div class="box-title">
-                    <h3><?= $this->__('Default Shipping Address') ?></h3>
-                    <a href="<?= $this->getPrimaryShippingAddressEditUrl() ?>"><?= $this->__('Edit Address') ?></a>
+                    <h3><?= $this->__('Default Shipping Address') ?> <a href="<?= $this->getPrimaryShippingAddressEditUrl() ?>" title="<?= $this->quoteEscape($this->__('Edit Address')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
                 </div>
                 <div class="box-content">
                     <address><?= $this->getPrimaryShippingAddressHtml() ?></address>
