--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -15,8 +15,7 @@
     <div class="col-1">
         <div class="box">
             <div class="box-title">
-                <h3><?= $this->__('Contact Information') ?></h3>
-                <a href="<?= $this->getUrl('customer/account/edit') ?>"><?= $this->__('Edit') ?></a>
+                <h3><?= $this->__('Contact Information') ?> <a href="<?= $this->getUrl('customer/account/edit') ?>" title="<?= $this->quoteEscape($this->__('Edit')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
             </div>
             <div class="box-content">
                 <p>
@@ -31,8 +30,7 @@
     <div class="col-2">
         <div class="box">
             <div class="box-title">
-                <h3><?= $this->__('Newsletter') ?></h3>
-                <a href="<?= $this->getUrl('newsletter/manage') ?>"><?= $this->__('Edit') ?></a>
+                <h3><?= $this->__('Newsletter') ?> <a href="<?= $this->getUrl('newsletter/manage') ?>" title="<?= $this->quoteEscape($this->__('Edit')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
             </div>
             <div class="box-content">
                 <p>
