--- a/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard/info.phtml
@@ -15,8 +15,7 @@
     <div class="col-1">
         <div class="box">
             <div class="box-title">
-                <h3><?= $this->__('Contact Information') ?></h3>
-                <a href="<?= $this->getUrl('customer/account/edit') ?>"><?= $this->__('Edit') ?></a>
+                <h3><?= $this->__('Contact Information') ?> <a href="<?= $this->getUrl('customer/account/edit') ?>" title="<?= $this->quoteEscape($this->__('Edit')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
             </div>
             <div class="box-content">
                 <p>
@@ -31,15 +30,14 @@
     <div class="col-2">
         <div class="box">
             <div class="box-title">
-                <h3><?= $this->__('Newsletters') ?></h3>
-                <a href="<?= $this->getUrl('newsletter/manage') ?>"><?= $this->__('Edit') ?></a>
+                <h3><?= $this->__('Newsletter') ?> <a href="<?= $this->getUrl('newsletter/manage') ?>" title="<?= $this->quoteEscape($this->__('Edit')) ?>"><?= $this->getIconSvg('edit') ?></a></h3>
             </div>
             <div class="box-content">
                 <p>
-                    <?php if( $this->getIsSubscribed() ): ?>
-                        <?= $this->__("You are currently subscribed to 'General Subscription'.") ?>
+                    <?php if ($this->getIsSubscribed()): ?>
+                        <?= $this->__('You are currently subscribed to our newsletter.') ?>
                     <?php else: ?>
-                        <?= $this->__('You are currently not subscribed to any newsletter.') ?>
+                        <?= $this->__('You are not subscribed to our newsletter.') ?>
                     <?php endif ?>
                 </p>
             </div>
