--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -11,25 +11,29 @@
 
 /** @var Mage_Customer_Block_Account_Forgotpassword $this */
 ?>
-<form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate-forgot">
-    <div class="fieldset">
-        <button type="button" class="dialog-close" id="dialog-close-btn" aria-label="<?= $this->__('Close') ?>"><?= $this->getIconSvg('x') ?></button>
-        <h2><?= $this->__('Retrieve your password') ?></h2>
-        <p class="required"><?= $this->__('* Required Fields') ?></p>
-        <ul class="form-list">
-            <li>
-                <label for="email_address_forgot" class="required"><?= $this->__('Email Address') ?></label>
-                <div class="input-box">
-                    <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address_forgot" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" autofocus />
-                </div>
-            </li>
-            <?= $this->getChildHtml('form.additional.info') ?>
-        </ul>
-    </div>
-    <div class="buttons-set">
-        <button type="submit" title="<?= $this->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
-    </div>
-</form>
+<div class="dialog__header">
+    <h2><?= $this->__('Retrieve your password') ?></h2>
+    <button type="button" class="dialog__close" id="dialog-close-btn" aria-label="<?= $this->__('Close') ?>">&times;</button>
+</div>
+<div class="dialog__content">
+    <form action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate-forgot">
+        <div class="fieldset">
+            <ul class="form-list">
+                <li>
+                    <label for="email_address_forgot"><?= $this->__('Email Address') ?></label>
+                    <div class="input-box">
+                        <input type="email" autocomplete="on" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address_forgot" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" autofocus />
+                    </div>
+                </li>
+                <?= $this->getChildHtml('form.additional.info') ?>
+            </ul>
+        </div>
+        <div class="dialog__actions">
+            <button type="button" class="button" onclick="this.closest('dialog').close()"><?= $this->__('Cancel') ?></button>
+            <button type="submit" title="<?= $this->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
+        </div>
+    </form>
+</div>
 <script type="text/javascript">
     var dataFormForgot = new VarienForm('form-validate-forgot', true);
 </script>
